# ai-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Resource.rc  main.c  window.json
.github/workflows/: cmake.yml
